rds.tf
resource "random_password" "db_passwords" {
  for_each         = toset(keys(var.entidades))
  length           = 16
  special          = true
  override_special = "!#$%&*+-=?^_"
}

resource "aws_db_instance" "rds_instances" {
  for_each = var.entidades

  allocated_storage      = var.rds_storage_gb
  db_name                = each.value
  engine                 = "postgres"
  engine_version         = var.rds_engine_version
  instance_class         = var.rds_instance_class
  
  username               = var.rds_username
  password               = random_password.db_passwords[each.key].result

  db_subnet_group_name   = aws_db_subnet_group.db_segments.name
  vpc_security_group_ids = [aws_security_group.rds_sg.id]
  
  publicly_accessible    = false 
  storage_encrypted      = true  
  skip_final_snapshot    = true

  tags = merge(var.common_tags, {
    Name   = "rds-${each.key}"
    Entity = title(each.key)
  })
}

# ==========================================================
# 3. EL BAÚL DE SECRETOS (SECRETS MANAGER)
# ==========================================================
resource "aws_secretsmanager_secret" "db_secrets" {
  for_each    = var.entidades
  name        = "rds-secret-${each.key}-v1"
  description = "Credenciales maestras para la instancia RDS de ${each.key}"
  
  recovery_window_in_days = 7 

  tags = merge(var.common_tags, {
    Domain = title(each.key)
  })
}

resource "aws_secretsmanager_secret_version" "db_credentials" {
  for_each  = aws_secretsmanager_secret.db_secrets
  secret_id = each.value.id
  
  # Este es el JSON que tus compañeros leerán con el SDK [cite: 104]
  secret_string = jsonencode({
    username = var.rds_username
    password = random_password.db_passwords[each.key].result
    engine   = "postgres"
    host     = aws_db_instance.rds_instances[each.key].address
    port     = 5432
    db_name  = aws_db_instance.rds_instances[each.key].db_name
  })
}
